New impl for special event placement.